# Linux_study

23_1116/cmake_04/: CMakeLists.txt  hello.cpp  readme.txt  test
23_1116/cmake_04/func1/: func1.h
23_1116/cmake_05/: CMakeLists.txt  readme.txt
23_1116/cmake_05/include/: func2.h
23_1116/cmake_05/src/: CMakeLists.txt  hello.cpp
23_1116/cmake_06/: CMakeLists.txt  readme.txt
23_1116/cmake_06/func1/: func1.cpp
23_1116/cmake_07/: CMakeLists.txt  readme.txt
23_1116/cmake_07/src/: main.cpp
23_1116/cmake_07/testFunc/include/: func1.h
23_1117/拷贝构造函数01/: CMakeLists.txt  main.cpp  test
23_1117/拷贝构造函数02/: main.cpp  test
c语言学习/231217/: char.c  find_longstring.c  my_strcmp.c  my_strcpy.c  ststic_test.c  test  字符串常量问题.c
start23_1115/: hello.cpp  test
start23_1115/cmake_01/: CMakeLists.txt  Makefile
start23_1115/cmake_02/: CMakeLists.txt  func.cpp  func.h  hello.cpp
start23_1115/cmake_03/: CMakeLists.txt  func2.cpp  readme.txt  test
